Cells are now clickable with condition of completing a streak of three

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="score">
             <h4 class="player1">Player1: </h4>
             <h4 class="player2">Player2: </h4>
-            <button class="startBtn">Create Board</button>
+            <!-- <button class="startBtn">Create Board</button> -->
         </div>
         <div class="board">
 
