now the game restarts after a player wins and it keeps the score

--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
 
     <div class="main">
         <div class="score">
-            <h4 class="player1">Player1: </h4>
-            <h4 class="player2">Player2: </h4>
-            <!-- <button class="startBtn">Create Board</button> -->
+
+            <!-- <input type="text" name="playerX" id="xName">
+            <label for="playerX">Player X: enter your name</label>
+
+            <input type="text" name="playerO" id="oName">
+            <label for="playerO">Player O: enter your name</label> -->
+
+            <h4 class="player1">Player X: </h4>
+            <h4 class="player2">Player O: </h4>
+
+            
         </div>
         <div class="board">
 
         </div>
     </div>
+    
 
     <script src="script.js"></script>
 </body>
